[FEAT] Add finance endpoints
